# AIFLIX

./: .env.example  .gitignore  Procfile  README.md  aiflix_templates.html  cookies.txt  db_backup.sqlite3  manage.py  post-deploy  pyproject.toml  requirements.txt  wget-log
accounts/: forms.py  models.py  urls.py  views.py
accounts/backends/: __init__.py
accounts/migrations/: 0001_initial.py
aiflix/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
aiflix/templatetags/: active_link.py
movies/: admin.py  ai_views.py  models.py  urls.py  views.py  views_landing.py
movies/migrations/: 0001_initial.py  0002_initial.py  0002_movie_is_active.py  0003_movie_ai_model_used_movie_content_category_and_more.py  0004_add_netflix_genres.py  0005_genrecategory_alter_genre_options_genre_order_and_more.py  0006_remove_genre_category_alter_genre_options_and_more.py  0007_subtitle_videofile_videoquality_and_more.py  0008_add_video_file_field.py
movies/templatetags/: active_link.py
profiles/: context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py  views_manage.py
profiles/migrations/: 0001_initial.py  0002_watchhistory_episode.py  0003_fix_profile_primary_key.py  0004_watchhistory_unique_watch_history_movie_and_more.py  0005_alter_watchhistory_movie.py  0006_alter_mylist_unique_together_mylist_content_type_and_more.py  0007_populate_content_type.py  0008_alter_mylist_content_type.py
profiles/templatetags/: custom_filters.py  navbar_tags.py
scripts/: generate_default_avatar.py  generate_kids_avatars.py
templates/: landing.html
(+54 files in other folders)
