[tool.poetry]
name = "aiflix"
version = "0.1.0"
description = "AIFLIX Streaming Platform"
authors = ["Dee-Mee"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.9.0"
django-debug-toolbar = "^5.2.0"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.1"
python-decouple = "^3.8"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^2023.10"
libsass = "^0.23.0"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
